# devcontainer

./: ansible.cfg  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
collections/ansible_collections/tuankn/pve/: README.md  galaxy.yml
collections/ansible_collections/tuankn/pve/playbooks/: create_cloud_vm.yml
collections/ansible_collections/tuankn/pve/roles/cloud_image/defaults/: main.yml
collections/ansible_collections/tuankn/pve/roles/cloud_image/tasks/: main.yml
inventory/: ath.yaml  pvenhp.yaml
vars/vault/: secret.yaml
