[tool.poetry]
name = "container-ansible-devcevcontainer"
version = "0.1.0"
description = ""
authors = ["tuankn82 <daitintdk@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "^2.17.1"
hvac = "^2.3.0"
jmespath = "^1.0.1"
proxmoxer = "^2.0.1"
pydantic = "^2.8.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
